<resources>
    <string name="app_name">z80sky</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="command_set">Command Set</string>
    <string name="explo_share_alert">Attention!</string>
    <string name="explo_share_text">No selected lines to share!</string>
    <string name="explo_share_ok">Ok</string>
    <string name="explo_about">File Explorer now supports only SCL, SNA, TAP files</string>
    <string name="menu_home">Home</string>
    <string name="test_dump">12345_-01_02_03_04_05_06_07_08-_12345678</string>
    <string name="menu_explo">Explorer</string>
    <string name="menu_programs">Programs</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_feedback">Feedback</string>
    <string name="share_text">"Hello! Check out this application in play store. \"z80sky\" - https://play.google.com/store/apps/details?id=ru.z80sky"</string>
    <string name="share_via">Share via</string>
    <string name="rate_app">https://play.google.com/store/apps/details?id=ru.z80sky</string>
    <string name="spectrum_next">Support Spectrum Next Features</string>
    <string name="hex_upper">Hexadecimal numbers in UPPER case</string>
    <string name="hex_mode">Hex mode</string>
    <string name="drw_desc">Reference Tool for Z80 CPU</string>
    <string name="abt_name">z80sky version 1.41</string>
    <string name="abt_author">Made by Arcadiy Gobuzov\nSharapova Okhota. Russia</string>
    <string name="made4">Made for persons from:</string>
    <string name="abt_based">Based on materials from</string>
    <string name="abt_link1">https://clrhome.org/table</string>
    <string name="abt_link2">https://wiki.specnext.dev</string>
    <string name="abt_link3">http://z80.info/z80syntx.htm</string>
    <string name="abt_link4">http://www.zilog.com/docs/z80/UM0080.pdf</string>
    <string name="grup_link1">https://www.facebook.com/groups/z80asm</string>
    <string name="grup_link2">https://www.facebook.com/groups/specnext</string>
    <string name="grup_link3">https://t.me/zxcoding</string>
    <string name="sysvar_n">Poking the variable will have no lasting effect.</string>
    <string name="sysvar_x">The variable should not be poked because the system might crash.</string>
    <string name="hint_command">Mnemonic, hex, dec, bin</string>
    <string name="hint_explo">Find text</string>
    <string name="expl_cancel">Cancel of exploring</string>
</resources>
