<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_weight="1"
    android:orientation="vertical">
    <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/play_store_512"/>
    <TextView
        android:paddingTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abt_name" android:textSize="20sp"/>
    <TextView
        android:paddingTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/made4"/>
    <TextView android:textColor="#2659a6"
              android:id="@+id/grup1"
              android:layout_width="wrap_content"
              android:layout_height="36dp"
              android:text="@string/grup_link1" android:textSize="14sp"/>
    <TextView android:textColor="#2659a6"
              android:id="@+id/grup2"
              android:layout_width="wrap_content"
              android:layout_height="36dp"
              android:text="@string/grup_link2" android:textSize="14sp"/>
    <TextView android:textColor="#2659a6"
              android:id="@+id/grup3"
              android:layout_width="wrap_content"
              android:layout_height="36dp"
              android:text="@string/grup_link3" android:textSize="16sp"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abt_based"/>
        <TextView android:textColor="#2659a6"
            android:id="@+id/link1"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/abt_link1" android:textSize="16sp"/>
        <TextView android:textColor="#2659a6"
            android:id="@+id/link2"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/abt_link2" android:textSize="16sp"/>
        <TextView android:textColor="#2659a6"
            android:id="@+id/link3"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/abt_link3" android:textSize="16sp"/>
        <TextView android:textColor="#2659a6"
            android:id="@+id/link4"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/abt_link4" android:textSize="14sp"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
