<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:visible="true"
            android:id="@+id/nav_explo"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_explo" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about" />
    </group>
    <item android:title="@string/menu_feedback">
        <menu>
            <item android:visible="false" android:icon="@drawable/ic_share" android:id="@+id/menu_share" android:title="Share"/>
            <item android:visible="false" android:icon="@drawable/ic_rate" android:id="@+id/menu_rate_the_app" android:title="Rate this app"/>
            <item android:icon="@drawable/ic_telegram" android:id="@+id/menu_telegram" android:title="Telegram"/>
        </menu>
    </item>
</menu>
