<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">

    <Switch
            android:id="@+id/spectrum_next"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:checked="true"
            android:text="@string/spectrum_next"/>
    <Switch
        android:id="@+id/hex_mode"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:checked="true"
        android:text="@string/hex_mode" />
    <Switch
        android:id="@+id/hex_upper"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:checked="true"
        android:text="@string/hex_upper" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Disassembler address:" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="64000" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="fa00" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="0xfa00" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="$fa00"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="fa00h" />
    </LinearLayout>
    <RadioGroup
        android:id="@+id/dis_adr"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_weight="1" />
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_weight="1" />
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_weight="1" />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_weight="1" />
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_weight="1"/>
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Disassembler 16 bits number:" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="64000" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="fa00" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="0xfa00" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="$fa00"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="fa00h" />
    </LinearLayout>
    <RadioGroup
        android:id="@+id/dis_16"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1" />
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Disassembler 8 bits number:" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="250" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="fa" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="0xfa" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="$fa"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="fah" />
    </LinearLayout>
    <RadioGroup
        android:id="@+id/dis_8"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1" />
    </RadioGroup>
</LinearLayout>
